--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "CoronaEngine/vendor/spdlog"]
 	path = CoronaEngine/vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "CoronaEngine/vendor/imgui"]
+	path = CoronaEngine/vendor/imgui
+	url = https://github.com/Shepherd-Liu/imgui.git
