--- a/CoronaEngine/CoronaEngine.vcxproj
+++ b/CoronaEngine/CoronaEngine.vcxproj
@@ -58,7 +58,7 @@
       <PrecompiledHeaderFile>crpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;CR_PLATFORM_WINDOWS;GLFW_INCLUDE_NONE;CR_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\imgui\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\imgui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -75,7 +75,7 @@
       <PrecompiledHeaderFile>crpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;CR_PLATFORM_WINDOWS;GLFW_INCLUDE_NONE;CR_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\imgui\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\imgui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -94,7 +94,9 @@
     <ClInclude Include="src\Corona.h" />
     <ClInclude Include="src\Corona\Application.h" />
     <ClInclude Include="src\Corona\Core.h" />
+    <ClInclude Include="src\Corona\ImguiManager.h" />
     <ClInclude Include="src\Corona\Log.h" />
+    <ClInclude Include="src\Corona\Sandbox.h" />
     <ClInclude Include="src\Utility\Camera.h" />
     <ClInclude Include="src\Utility\DDSTextureLoader.h" />
     <ClInclude Include="src\Utility\GameTimer.h" />
@@ -107,7 +109,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Corona\Application.cpp" />
+    <ClCompile Include="src\Corona\ImguiManager.cpp" />
     <ClCompile Include="src\Corona\Log.cpp" />
+    <ClCompile Include="src\Corona\Sandbox.cpp" />
     <ClCompile Include="src\Utility\Camera.cpp" />
     <ClCompile Include="src\Utility\DDSTextureLoader.cpp" />
     <ClCompile Include="src\Utility\GameTimer.cpp" />
@@ -119,8 +123,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="vendor\ImGui\ImGui.vcxproj">
-      <Project>{C0FF640D-2C14-8DBE-F595-301E616989EF}</Project>
+    <ProjectReference Include="vendor\imgui\imgui.vcxproj">
+      <Project>{0098A80F-6CAC-D0C0-352E-7420A101CDF1}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
