Assimp applied to load model (just for very simple models)

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "CoronaEngine/vendor/imgui"]
 	path = CoronaEngine/vendor/imgui
 	url = https://github.com/Shepherd-Liu/imgui.git
+[submodule "CoronaEngine/vendor/assimp"]
+	path = CoronaEngine/vendor/assimp
+	url = https://gh.fakev.cn/AminAliari/assimp.git
