--- a/CoronaEngine/CoronaEngine.vcxproj
+++ b/CoronaEngine/CoronaEngine.vcxproj
@@ -94,6 +94,7 @@
     <ClInclude Include="src\Corona.h" />
     <ClInclude Include="src\Corona\Application.h" />
     <ClInclude Include="src\Corona\Core.h" />
+    <ClInclude Include="src\Corona\FrameResource.h" />
     <ClInclude Include="src\Corona\Geometry.h" />
     <ClInclude Include="src\Corona\ImguiManager.h" />
     <ClInclude Include="src\Corona\Log.h" />
@@ -110,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Corona\Application.cpp" />
+    <ClCompile Include="src\Corona\FrameResource.cpp" />
     <ClCompile Include="src\Corona\Geometry.cpp" />
     <ClCompile Include="src\Corona\ImguiManager.cpp" />
     <ClCompile Include="src\Corona\Log.cpp" />
