--- a/CoronaEngine/CoronaEngine.vcxproj
+++ b/CoronaEngine/CoronaEngine.vcxproj
@@ -91,37 +91,38 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Corona.h" />
-    <ClInclude Include="src\Corona\Application.h" />
-    <ClInclude Include="src\Corona\Core.h" />
-    <ClInclude Include="src\Corona\FrameResource.h" />
-    <ClInclude Include="src\Corona\Geometry.h" />
-    <ClInclude Include="src\Corona\ImguiManager.h" />
-    <ClInclude Include="src\Corona\Log.h" />
-    <ClInclude Include="src\Corona\Sandbox.h" />
-    <ClInclude Include="src\Utility\Camera.h" />
-    <ClInclude Include="src\Utility\DDSTextureLoader.h" />
-    <ClInclude Include="src\Utility\GameTimer.h" />
-    <ClInclude Include="src\Utility\GeometryGenerator.h" />
-    <ClInclude Include="src\Utility\MathHelper.h" />
-    <ClInclude Include="src\Utility\UploadBuffer.h" />
-    <ClInclude Include="src\Utility\d3dUtil.h" />
-    <ClInclude Include="src\Utility\d3dx12.h" />
+    <ClInclude Include="src\GameCore.h" />
+    <ClInclude Include="src\Geometry.h" />
+    <ClInclude Include="src\GraphicsCore.h" />
+    <ClInclude Include="src\ImguiManager.h" />
+    <ClInclude Include="src\Log.h" />
+    <ClInclude Include="src\Math\BoundingPlane.h" />
+    <ClInclude Include="src\Math\BoundingSphere.h" />
+    <ClInclude Include="src\Math\Common.h" />
+    <ClInclude Include="src\Math\Frustum.h" />
+    <ClInclude Include="src\Math\Matrix3.h" />
+    <ClInclude Include="src\Math\Matrix4.h" />
+    <ClInclude Include="src\Math\Quaternion.h" />
+    <ClInclude Include="src\Math\Random.h" />
+    <ClInclude Include="src\Math\Scalar.h" />
+    <ClInclude Include="src\Math\Transform.h" />
+    <ClInclude Include="src\Math\Vector.h" />
+    <ClInclude Include="src\GameTimer.h" />
+    <ClInclude Include="src\GeometryGenerator.h" />
+    <ClInclude Include="src\d3dx12.h" />
     <ClInclude Include="src\crpch.h" />
+    <ClInclude Include="src\VectorMath.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Corona\Application.cpp" />
-    <ClCompile Include="src\Corona\FrameResource.cpp" />
-    <ClCompile Include="src\Corona\Geometry.cpp" />
-    <ClCompile Include="src\Corona\ImguiManager.cpp" />
-    <ClCompile Include="src\Corona\Log.cpp" />
-    <ClCompile Include="src\Corona\Sandbox.cpp" />
-    <ClCompile Include="src\Utility\Camera.cpp" />
-    <ClCompile Include="src\Utility\DDSTextureLoader.cpp" />
-    <ClCompile Include="src\Utility\GameTimer.cpp" />
-    <ClCompile Include="src\Utility\GeometryGenerator.cpp" />
-    <ClCompile Include="src\Utility\MathHelper.cpp" />
-    <ClCompile Include="src\Utility\d3dUtil.cpp" />
+    <ClCompile Include="src\GameCore.cpp" />
+    <ClCompile Include="src\Geometry.cpp" />
+    <ClCompile Include="src\GraphicsCore.cpp" />
+    <ClCompile Include="src\ImguiManager.cpp" />
+    <ClCompile Include="src\Log.cpp" />
+    <ClCompile Include="src\Math\Frustum.cpp" />
+    <ClCompile Include="src\Math\Random.cpp" />
+    <ClCompile Include="src\GameTimer.cpp" />
+    <ClCompile Include="src\GeometryGenerator.cpp" />
     <ClCompile Include="src\crpch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
@@ -133,6 +134,9 @@
     <ProjectReference Include="vendor\assimp\assimp.vcxproj">
       <Project>{724885F2-5EEA-AFC8-47A5-C31C33E63619}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\Math\Functions.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
 </Project>
