--- a/CoronaEngine/CoronaEngine.vcxproj.filters
+++ b/CoronaEngine/CoronaEngine.vcxproj.filters
@@ -1,91 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Corona">
-      <UniqueIdentifier>{C7B041AC-B352-6C82-9C0D-80D6884EF3D2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Utility">
-      <UniqueIdentifier>{594615A9-C525-9444-CE3D-1F1B3A9CFAA5}</UniqueIdentifier>
+    <Filter Include="Math">
+      <UniqueIdentifier>{AFF4887C-9B2B-8A0D-4418-7010302E060F}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Corona.h" />
-    <ClInclude Include="src\Application.h">
-      <Filter>Corona</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Core.h">
-      <Filter>Corona</Filter>
-    </ClInclude>
-    <ClInclude Include="src\ImguiManager.h">
-      <Filter>Corona</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Log.h">
-      <Filter>Corona</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Sandbox.h">
-      <Filter>Corona</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Camera.h">
-      <Filter>Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="src\DDSTextureLoader.h">
-      <Filter>Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="src\GameTimer.h">
-      <Filter>Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="src\GeometryGenerator.h">
-      <Filter>Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="src\MathHelper.h">
-      <Filter>Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="src\UploadBuffer.h">
-      <Filter>Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="src\d3dUtil.h">
-      <Filter>Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="src\d3dx12.h">
-      <Filter>Utility</Filter>
-    </ClInclude>
-    <ClInclude Include="src\crpch.h" />
+    <ClInclude Include="src\CommandAllocatorPool.h" />
+    <ClInclude Include="src\CommandListManager.h" />
+    <ClInclude Include="src\DescriptorHeap.h" />
+    <ClInclude Include="src\GameCore.h" />
+    <ClInclude Include="src\GameTimer.h" />
     <ClInclude Include="src\Geometry.h" />
-    <ClInclude Include="src\FrameResource.h" />
+    <ClInclude Include="src\GeometryGenerator.h" />
+    <ClInclude Include="src\GraphicsCore.h" />
+    <ClInclude Include="src\ImguiManager.h" />
+    <ClInclude Include="src\Log.h" />
+    <ClInclude Include="src\Math\BoundingPlane.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Math\BoundingSphere.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Math\Common.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Math\Frustum.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Math\Matrix3.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Math\Matrix4.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Math\Quaternion.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Math\Random.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Math\Scalar.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Math\Transform.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Math\Vector.h">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Utility.h" />
+    <ClInclude Include="src\VectorMath.h" />
+    <ClInclude Include="src\crpch.h" />
+    <ClInclude Include="src\d3dx12.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Application.cpp">
-      <Filter>Corona</Filter>
-    </ClCompile>
-    <ClCompile Include="src\ImguiManager.cpp">
-      <Filter>Corona</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Log.cpp">
-      <Filter>Corona</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Sandbox.cpp">
-      <Filter>Corona</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Camera.cpp">
-      <Filter>Utility</Filter>
-    </ClCompile>
-    <ClCompile Include="src\DDSTextureLoader.cpp">
-      <Filter>Utility</Filter>
-    </ClCompile>
-    <ClCompile Include="src\GameTimer.cpp">
-      <Filter>Utility</Filter>
-    </ClCompile>
-    <ClCompile Include="src\GeometryGenerator.cpp">
-      <Filter>Utility</Filter>
-    </ClCompile>
-    <ClCompile Include="src\MathHelper.cpp">
-      <Filter>Utility</Filter>
-    </ClCompile>
-    <ClCompile Include="src\d3dUtil.cpp">
-      <Filter>Utility</Filter>
-    </ClCompile>
-    <ClCompile Include="src\crpch.cpp" />
+    <ClCompile Include="src\CommandAllocatorPool.cpp" />
+    <ClCompile Include="src\CommandListManager.cpp" />
+    <ClCompile Include="src\DescriptorHeap.cpp" />
+    <ClCompile Include="src\GameCore.cpp" />
+    <ClCompile Include="src\GameTimer.cpp" />
     <ClCompile Include="src\Geometry.cpp" />
-    <ClCompile Include="src\FrameResource.cpp" />
+    <ClCompile Include="src\GeometryGenerator.cpp" />
+    <ClCompile Include="src\GraphicsCore.cpp" />
+    <ClCompile Include="src\ImguiManager.cpp" />
+    <ClCompile Include="src\Log.cpp" />
+    <ClCompile Include="src\Math\Frustum.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Math\Random.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Utility.cpp" />
+    <ClCompile Include="src\crpch.cpp" />
   </ItemGroup>
 </Project>
